--- a/Ottawa/Base.lproj/Main.storyboard
+++ b/Ottawa/Base.lproj/Main.storyboard
@@ -198,6 +198,9 @@
                                                                     <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
                                                                         <rect key="frame" x="0.0" y="0.0" width="673" height="18"/>
                                                                     </variation>
+                                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="273" height="18"/>
+                                                                    </variation>
                                                                     <variation key="heightClass=regular-widthClass=regular">
                                                                         <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="25"/>
                                                                     </variation>
@@ -209,6 +212,9 @@
                                                                     <nil key="highlightedColor"/>
                                                                     <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
                                                                         <rect key="frame" x="0.0" y="18" width="673" height="15"/>
+                                                                    </variation>
+                                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                                        <rect key="frame" x="0.0" y="18" width="273" height="15"/>
                                                                     </variation>
                                                                     <variation key="heightClass=regular-widthClass=regular">
                                                                         <fontDescription key="fontDescription" name="HelveticaNeue-ThinItalic" family="Helvetica Neue" pointSize="18"/>
@@ -222,6 +228,9 @@
                                                                     <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
                                                                         <rect key="frame" x="0.0" y="33" width="673" height="14"/>
                                                                     </variation>
+                                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                                        <rect key="frame" x="0.0" y="33" width="273" height="14"/>
+                                                                    </variation>
                                                                     <variation key="heightClass=regular-widthClass=regular">
                                                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                                     </variation>
@@ -230,10 +239,16 @@
                                                             <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
                                                                 <rect key="frame" x="111" y="0.0" width="673" height="47"/>
                                                             </variation>
+                                                            <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                                <rect key="frame" x="111" y="0.0" width="273" height="47"/>
+                                                            </variation>
                                                         </stackView>
                                                     </subviews>
                                                     <variation key="heightClass=compact-widthClass=regular" misplaced="YES">
                                                         <rect key="frame" x="8" y="8" width="784" height="104"/>
+                                                    </variation>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="8" y="8" width="384" height="104"/>
                                                     </variation>
                                                 </stackView>
                                             </subviews>
@@ -403,7 +418,7 @@
                             </mask>
                         </variation>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="Screenshot-30" id="wKx-oe-o1f" userLabel="Attractions"/>
+                    <tabBarItem key="tabBarItem" title="Things To Do" image="Screenshot-30" id="wKx-oe-o1f" userLabel="Attractions"/>
                     <navigationItem key="navigationItem" id="6kN-lQ-Kdp"/>
                     <connections>
                         <outlet property="eventsButton" destination="M4o-Ip-pJO" id="ZMe-vK-yxm"/>
@@ -661,7 +676,7 @@
                             </mask>
                         </variation>
                     </view>
-                    <tabBarItem key="tabBarItem" image="Info-30" id="aCi-hn-tfP" userLabel="Info"/>
+                    <tabBarItem key="tabBarItem" title="About Ottawa" image="Info-30" id="aCi-hn-tfP" userLabel="Info"/>
                     <connections>
                         <outlet property="geographyText" destination="0wf-cA-1zg" id="m3h-Ku-W3E"/>
                         <outlet property="historyText" destination="bgt-7j-tgh" id="LHg-NU-zOb"/>
@@ -689,7 +704,7 @@
                                     <rect key="frame" x="-304" y="0.0" width="904" height="551"/>
                                 </variation>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="aIS-pv-jYv">
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="aIS-pv-jYv">
                                 <rect key="frame" x="20" y="20" width="239" height="252"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="BdX-jn-2yV">
@@ -1006,7 +1021,7 @@
                             </mask>
                         </variation>
                     </view>
-                    <tabBarItem key="tabBarItem" image="Geo-fence-30" id="kaf-LT-M35" userLabel="Intro"/>
+                    <tabBarItem key="tabBarItem" title="Welcome" image="Geo-fence-30" id="kaf-LT-M35" userLabel="Intro"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="600"/>
                     <connections>
@@ -1112,7 +1127,7 @@
                                 </variation>
                             </label>
                             <textView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.90000000000000002" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="21B-Lp-hTb" customClass="RoundedEdgeTextView" customModule="Ottawa" customModuleProvider="target">
-                                <rect key="frame" x="340" y="50" width="240" height="120"/>
+                                <rect key="frame" x="340" y="53" width="240" height="120"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.7981411638" colorSpace="calibratedRGB"/>
                                 <string key="text">DON'T MISS THESE!
 Cultural attractions
@@ -1157,7 +1172,7 @@ Interactive kid &amp; family activities
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.69999999999999996" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mp5-7P-NAD">
                                 <rect key="frame" x="20" y="51" width="270" height="180"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <mutableString key="text">IN SPRING
+                                <string key="text">IN SPRING
 • Ottawa Maple SugarFest
 • Ottawa International Writers Festival
 • Ottawa ComicCon
@@ -1190,7 +1205,7 @@ IN AUTUMN
 • Remembrance Day Ceremony
 IN WINTER
 • Winterlude Festival
-</mutableString>
+</string>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <variation key="heightClass=compact">
@@ -1209,7 +1224,7 @@ IN WINTER
                             <constraint firstItem="21B-Lp-hTb" firstAttribute="width" secondItem="isM-1E-5Zu" secondAttribute="width" multiplier="0.4" id="0f5-2c-15i">
                                 <variation key="heightClass=compact" constant="-30"/>
                             </constraint>
-                            <constraint firstItem="21B-Lp-hTb" firstAttribute="top" secondItem="oPv-o1-JSM" secondAttribute="bottom" constant="5" id="50X-D9-sC6"/>
+                            <constraint firstItem="21B-Lp-hTb" firstAttribute="top" secondItem="oPv-o1-JSM" secondAttribute="bottom" constant="8" id="50X-D9-sC6"/>
                             <constraint firstItem="QJ5-Fl-Rah" firstAttribute="bottom" secondItem="Qyh-vD-jMQ" secondAttribute="top" id="FiI-t2-yFX"/>
                             <constraint firstItem="QJ5-Fl-Rah" firstAttribute="leading" secondItem="isM-1E-5Zu" secondAttribute="leading" id="NFw-kQ-3DT"/>
                             <constraint firstAttribute="trailingMargin" secondItem="oPv-o1-JSM" secondAttribute="trailing" constant="15" id="NeU-kZ-csE"/>
@@ -1278,7 +1293,7 @@ IN WINTER
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oI9-Rx-D8d" userLabel="WinterludeText" customClass="RoundedEdgeTextView" customModule="Ottawa" customModuleProvider="target">
-                                <rect key="frame" x="35" y="81" width="530" height="219"/>
+                                <rect key="frame" x="35" y="84" width="530" height="216"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                 <string key="text">Winterlude, the Capital's winter celebration, is held in Ottawa–Gatineau each February. It was created in 1979 to celebrate Canada's unique northern climate and culture.
 
@@ -1291,8 +1306,9 @@ Skate on the world's largest skating rink, the Rideau Canal Skateway. Check out 
                                 <variation key="heightClass=regular-widthClass=compact">
                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 </variation>
-                                <variation key="heightClass=regular-widthClass=regular">
+                                <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
                                     <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
+                                    <rect key="frame" x="65" y="97" width="670" height="248"/>
                                 </variation>
                             </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CSE" translatesAutoresizingMaskIntoConstraints="NO" id="4q6-49-zVT" customClass="RoundedEdgeImage" customModule="Ottawa" customModuleProvider="target">
@@ -1300,6 +1316,9 @@ Skate on the world's largest skating rink, the Rideau Canal Skateway. Check out 
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="4q6-49-zVT" secondAttribute="height" multiplier="13:5" id="9va-Y3-Jf6"/>
                                 </constraints>
+                                <variation key="heightClass=regular-widthClass=regular" misplaced="YES">
+                                    <rect key="frame" x="20" y="25" width="168" height="64"/>
+                                </variation>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VoP-tE-Hzo" customClass="RoundedButton" customModule="Ottawa" customModuleProvider="target">
                                 <rect key="frame" x="520" y="25" width="45" height="30"/>
@@ -1314,6 +1333,12 @@ Skate on the world's largest skating rink, the Rideau Canal Skateway. Check out 
                                     <action selector="goAttractions:" destination="umC-kH-Ai6" eventType="touchUpInside" id="cVg-KG-fOu"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Winterlude2" translatesAutoresizingMaskIntoConstraints="NO" id="BVF-TE-7hN">
+                                <rect key="frame" x="368" y="290" width="212" height="79"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="BVF-TE-7hN" secondAttribute="height" multiplier="240:89" id="EQM-Hj-FYR"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -1321,9 +1346,19 @@ Skate on the world's largest skating rink, the Rideau Canal Skateway. Check out 
                             <constraint firstItem="4q6-49-zVT" firstAttribute="top" secondItem="nsz-fS-d2F" secondAttribute="bottom" constant="5" id="3oA-fR-XFW"/>
                             <constraint firstItem="EJi-N2-sdP" firstAttribute="top" secondItem="orP-X9-3fi" secondAttribute="top" id="3rX-ud-5vD"/>
                             <constraint firstItem="pSr-x8-j07" firstAttribute="top" secondItem="azm-f2-n8Z" secondAttribute="bottom" id="41K-fg-i3I"/>
+                            <constraint firstItem="BVF-TE-7hN" firstAttribute="width" secondItem="oI9-Rx-D8d" secondAttribute="width" multiplier="0.4" id="5Dn-bx-oLY">
+                                <variation key="heightClass=compact" constant="-30"/>
+                            </constraint>
                             <constraint firstItem="EJi-N2-sdP" firstAttribute="leading" secondItem="orP-X9-3fi" secondAttribute="leading" id="5u4-Rt-UnS"/>
                             <constraint firstItem="4q6-49-zVT" firstAttribute="leading" secondItem="orP-X9-3fi" secondAttribute="leadingMargin" id="9lx-H0-MnB"/>
-                            <constraint firstItem="4q6-49-zVT" firstAttribute="bottom" secondItem="oI9-Rx-D8d" secondAttribute="top" constant="-5" id="R5q-wi-zJp"/>
+                            <constraint firstItem="BVF-TE-7hN" firstAttribute="trailing" secondItem="oI9-Rx-D8d" secondAttribute="trailing" constant="15" id="Atx-kF-TaH">
+                                <variation key="heightClass=compact" constant="20"/>
+                                <variation key="heightClass=regular-widthClass=regular" constant="25"/>
+                            </constraint>
+                            <constraint firstItem="oI9-Rx-D8d" firstAttribute="bottom" secondItem="BVF-TE-7hN" secondAttribute="top" constant="10" id="F6a-b2-zKu">
+                                <variation key="heightClass=compact" constant="30"/>
+                            </constraint>
+                            <constraint firstItem="4q6-49-zVT" firstAttribute="bottom" secondItem="oI9-Rx-D8d" secondAttribute="top" constant="-8" id="R5q-wi-zJp"/>
                             <constraint firstItem="VoP-tE-Hzo" firstAttribute="trailing" secondItem="oI9-Rx-D8d" secondAttribute="trailing" id="XYG-hc-SGC"/>
                             <constraint firstItem="oI9-Rx-D8d" firstAttribute="bottom" secondItem="orP-X9-3fi" secondAttribute="centerY" id="YLZ-ES-D1v">
                                 <variation key="heightClass=regular-widthClass=compact" constant="-40"/>
@@ -1367,6 +1402,7 @@ Skate on the world's largest skating rink, the Rideau Canal Skateway. Check out 
         <image name="Screenshot-30" width="30" height="30"/>
         <image name="Tulips" width="1200" height="900"/>
         <image name="Winterlude" width="1600" height="500"/>
+        <image name="Winterlude2" width="1600" height="590"/>
         <image name="WinterludeTitle" width="647" height="74"/>
         <image name="canal" width="1450" height="816"/>
     </resources>
